testing/valid_input/ok08.java
class Main {
    static int aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa = 0000_0012;
    static void run() {
        i = 0xF;
    }
}
