testing/invalid_lex/lex14.java
class Main {
    static int i = 5.62aasf.adf;
}
